--- a/sample-deploy/nginx.yaml
+++ b/sample-deploy/nginx.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: nginx
-    test: nginx
+    test: nginx2
   name: nginx
   namespace: numaplane-system
 spec:
