--- a/raw-example/nginx.yaml
+++ b/raw-example/nginx.yaml
@@ -6,7 +6,7 @@ metadata:
   name: nginx
 spec:
   containers:
-  - image: docker.intuit.com/nginx
+  - image: nginx
     name: nginx
     resources: {}
   dnsPolicy: ClusterFirst
