--- a/helm-dependency-example/templates/deployment.yaml
+++ b/helm-dependency-example/templates/deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: nginx2
   labels:
-    app: nginx
+    app: nginx2
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: nginx
+      app: nginx2
   template:
     metadata:
       labels:
-        app: nginx
+        app: nginx2
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
